# D2D_MultiLevel_Version_10

./: FINDAVERAGE100_.json
DASTS2-PB1-C/: CMakeLists.txt  Config.json  test.cpp
DASTS2-PB1-C/src/: Config.Cpp  Config.h  parameter.cpp  parameter.h  solution.cpp  solution.h
DASTS2-PB1-C/src/tabuSearch/: initSolution.h
DASTS2-PB1/DASTS2-main/: config.yml  descrip.txt  main.py  test.py
DASTS2-PB1/DASTS2-main/src/: load_input.py
DASTS2-PB1/DASTS2-main/src/ip/: gurobi_ip.py  ip_utils.py
DASTS2-PB5/DASTS2-main/: .gitignore  config.yml  data.json  description.txt  main.py
DASTS2-PB5/DASTS2-main/src/: generate_data.py  utils.py
DASTS2_VERSION8_C/: Config.json  main.cpp
DASTS2_VERSION8_C(!)/: CMakeLists.txt  Config.json  main.cpp
DASTS2_VERSION8_C(!)/multilevel_result/: 100_.json  12_.json  20_.json  50_.json  6_.json
DASTS2_VERSION8_C(!)/result/: 50_.json  6_.json
DASTS2_VERSION8_C(!)/src/: Config.cpp  Random.h  Solution.h  Utils.h
DASTS2_VERSION8_C(!)/src/multiLevel/: MultiLevel.cpp  MultiLevel.h
DASTS2_VERSION8_C(!)/src/tabuSearch/: TabuSearch.cpp  TabuSearch.h
DASTS2_VERSION8_C/multilevel_result/: 100_.json  20_.json  50_.json  6_.json
DASTS2_VERSION8_C/src/: Config.cpp  Config.h  Input.h  Solution.cpp
DASTS2_VERSION8_C/src/multiLevel/: MultiLevel.cpp  MultiLevel.h
DASTS2_VERSION8_C/src/tabuSearch/: TabuSearch.cpp  TabuSearch.h
FINDAVERAGE/: 100_.json  Config.json  config.cpp  config.h  main.cpp  result_100.10.1_.json  result_100.20.1_.json  result_100.30.1_.json  result_100.40.1_.json  result_50_.json
(+9 files in other folders)
